# VeriNN

./: .gitignore  README.MD  README.md
Refine_abstraction/: diff.txt  modified_cons.txt  modified_out_mar8.txt  mynewresult.txt  mynewresult_new.txt  myresult.txt  newz3.py  original_image.py  out.txt  predict.txt  predict_new.txt  read_net_file.py  testn.txt
deep_refine/: .gitignore  CMakeLists.txt  Makefile  README  bounds_3_7.txt  cluster_cmd.txt  command.sh  command.txt  drefine.py  main.cpp  network.cc  network.hh  run_tool.sh  safe_to_safe_0.0.csv  script.py  setup.sh  unsafe_to_timeout.csv
deep_refine/Discussion/: 2021-04-16-Note-18-21.xoj  substitute_approach.xoj
deep_refine/benchmarks/: fppolyForward.txt  fppolyForward_small_ex.txt  mnist_my_text.tf
deep_refine/benchmarks/networks/tf/: mnist_relu_6_100.tf
deep_refine/benchmarks/networks/tf/mnist/: mnist_relu_3_100.tf  mnist_relu_5_100.tf  mnist_relu_9_100.tf
deep_refine/converter/: onnx_to_tf.py
deep_refine/deeppoly/: CMakeLists.txt  analysis.cc  analysis.hh  configuration.cc  configuration.hh  deeppoly_configuration.cc  deeppoly_configuration.hh  deeppoly_driver.cc  deeppoly_driver.hh  helper.cc  helper.hh  interval.cc  interval.hh  network.cc  network.hh  optimizer.cc  optimizer.hh  parser.cc  parser.hh  temp.txt  vnnlib.cc  vnnlib.hh
deep_refine/gurobi_cmake/: FindGUROBI.cmake
deep_refine/k/: findk.cc  findk.hh
deep_refine/outfiles/: deeppoly_out1.txt  marked.txt  marked_neurons.txt  new_marked.txt  result.txt
deep_refine/papers/atva/: biblio.bib  macro.tex  main.tex
deep_refine/papers/atva/fig/: deepsrgr_data.txt  drefine_verified_data.txt  ep_plot.tex  four_class_data.txt  marabou_data.txt  oval_data.txt  pictorial1.tex  refinepoly_data.txt
deep_refine/papers/atva/sections/: algo.tex  experiments.tex  intro.tex  motivation.tex  prelim.tex  proofs.tex  setform.tex
deep_refine/papers/draft/: Makefile  algo.tex  biblio.bib  macro.tex  main.tex  model.tex  related.tex  reviews.odt  valuation.tex
deep_refine/papers/draft/FTP test data/: FTP testing data.xlsx
deep_refine/papers/draft/fig/: alpha_beta_data.txt  data_plot.tex  drefine.tex  ep_plot.tex  nn1.tex  refinepoly_data.txt  runtime_comp.tex  runtime_texada.tex
deep_refine/papers/draft/sections/: algo.tex  appendix.tex  appendix1.tex  conclusion.tex  experiments.tex  intro.tex  model.tex  motivation.tex  prelim.tex  proofs.tex  related.tex  variations.tex
deep_refine/papers/tacas/: algo.tex  biblio.bib  fig-motivate.tex  main.aux  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex
deep_refine/papers/tacas/FTP test data/: FTP testing data.csv
deep_refine/parallelization/: concurrent_run.cc  concurrent_run.hh  parallel_fns.cc
deep_refine/src/: CMakeLists.txt  backprop.cc  backprop.hh  main.cpp  network.cc  network.hh  z3expr.cc  z3expr.hh
deep_refine/src/include/: api.h  drefine_api.h
deep_refine/src/lib/: backprop.cc  backprop.hh  bounds_milp.cc  bounds_milp.hh  concurrent_run.cc  concurrent_run.hh  configuration.cc  configuration.hh  decision_making.cc  decision_making.hh  drefine_driver.cc  drefine_driver.hh  forward_prop.cc  forward_prop.hh  milp_mark.cc  milp_mark.hh  milp_refine.cc  milp_refine.hh  network.cc  network.hh  parallel_fns.cc  parallel_fns.hh  pullback.cc  pullback.hh  vericomp.cc  vericomp.hh  z3expr.cc  z3expr.hh
drefine/: CMakeLists.txt  Makefile  README.md  run_tool.sh  script.py
drefine/converter/: onnx_to_tf.py
drefine/deeppoly/: CMakeLists.txt  analysis.hh  deeppoly_configuration.cc  deeppoly_driver.cc  helper.cc  interval.cc  network.cc  optimizer.cc  optimizer.hh
drefine/ex_tools/: Makefile
drefine/gurobi_cmake/: FindGUROBI.cmake
drefine/papers/atva/: biblio.bib  macro.tex  main.tex
drefine/papers/atva/fig/: alpha_beta_data.txt  data_plot.tex  deeppoly_data.txt  drefine_data.txt  drefine_falsified_data.txt  pictorial1.tex  pictorial2.tex  runtime.tex
drefine/papers/atva/sections/: algo.tex  appendix.tex  conclusion.tex  experiments.tex  intro.tex  motivation.tex  prelim.tex  proofs.tex  ranking.tex
drefine/src/: main.cpp
drefine/src/lib/: drefine_driver.hh  milp_mark.hh  milp_refine.cc  pullback.hh
outdated/nitesh-zono-refine/: cluttering.txt  create_actual_image.py  input_unmodified.txt  maxsat.py  modifier.py  output_unmodified.txt  parsing.py  read_net_file.py  z3_format_converter.py
refine_abstraction/: checkfirst  cluttering.txt  commands.sh  create_actual_image.py  eta_d_dash.py  input_modified.txt  internal_modified.txt  maxsat.py  mnist  modified_in_mar8.txt  modified_mar8_cons.txt  modified_out_mar8.txt  modified_output_cons.txt  modifier.py  mynewresult.txt  myresult.txt  newz3.py  original_const.txt  original_image.txt  out.txt  output_modified.txt  outputlayer.txt  parsing.py  predict_orig.txt  readme.md  ress.txt  solve.py  test.py  testing.py  testn.txt  z3_format_converter.py
